--- a/src/plugin/config.yml
+++ b/src/plugin/config.yml
@@ -28,5 +28,5 @@ install:
             name: bulk-ui
             definition:
                 path: bulk-ui
-                label: Bulk UI
+                label: Bulk Import
                 icon: database
